# pulumi_restapi

./: README.md  pyproject.toml
pulumi_restapi/: README.md  __init__.py  _inputs.py  _utilities.py  get_object.py  object.py  provider.py  pulumi-plugin.json
pulumi_restapi/config/: __init__.pyi  outputs.py  vars.py
