[project]
  name = "pulumi_restapi"
  description = "A Pulumi provider dynamically bridged from restapi."
  dependencies = ["parver>=0.2.1", "pulumi>=3.142.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  readme = "README.md"
  requires-python = ">=3.9"
  dynamic = ["version"]
  [project.urls]
    Repository = "https://github.com/mastercard/terraform-provider-restapi"

[build-system]
  requires = ["setuptools>=61.0", "setuptools_scm"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools_scm]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_restapi = ["py.typed", "pulumi-plugin.json"]
